App structure initialization and WIP

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -5,38 +5,57 @@
 
 .header {
     position: fixed;
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-template-columns: minmax(200px, 300px) auto;
     top: 0;
     left: 0;
     right: 0;
     height: 56px;
-    padding: 0 16px;
+    padding-right: 16px;
     background: var(--header-background);
     border-bottom: 1px solid var(--gray-1);
 
-    h1 {
-        margin: 0;
-        font-family: var(--font-heading);
-        font-size: var(--font-size--biggest);
-        font-weight: 900;
+    .header__logo {
+        display: flex;
+        align-items: center;
+
+        h1 {
+            margin: 0;
+            padding-left: 16px;
+            font-family: var(--font-heading);
+            font-size: var(--font-size--biggest);
+            font-weight: 900;
+        }
     }
 
-    .header__nav {
-        height: 100%;
-        margin-left: auto;
+    .header__content {
+        display: flex;
+        align-items: center;
 
-        .header__ul {
-            display: flex;
-            margin: 0;
-            padding: 0;
-            list-style: none;
+        .header__campaign {
+            margin-left: 16px;
 
-            > li > a {
+            h4 {
+                margin: 0;
+            }
+        }
+
+        .header__nav {
+            height: 100%;
+            margin-left: auto;
+
+            .header__ul {
                 display: flex;
-                align-items: center;
-                height: 56px;
-                padding: 0 16px;
+                margin: 0;
+                padding: 0;
+                list-style: none;
+
+                > li > a {
+                    display: flex;
+                    align-items: center;
+                    height: 56px;
+                    padding: 0 16px;
+                }
             }
         }
     }
