--- a/src/components/notes/Notes.scss
+++ b/src/components/notes/Notes.scss
@@ -15,11 +15,19 @@
     background-color: var(--white);
     border-radius: 4px;
     box-shadow: var(--shadow-1);
+    transition: box-shadow 0.2s ease-in-out;
+
+    &:focus-within {
+        box-shadow: var(--shadow-4);
+    }
 
     textarea {
         resize: none;
         width: 100%;
-        height: 200px;
+        min-height: 128px;
+        padding: 0;
+        font-size: var(--font-size--normal);
+        line-height: var(--font-size--big);
         border: 0;
 
         &:focus {
