--- a/src/index.scss
+++ b/src/index.scss
@@ -67,12 +67,15 @@ a.no-style:visited {
     font-size: var(--font-size--normal);
     font-weight: 700;
     text-transform: uppercase;
+    text-decoration: none;
 
+    color: inherit;
     background-color: transparent;
 
     border: none;
     border-radius: 4px;
 
+    transition: all 0.1s ease-in-out;
     cursor: pointer;
 
     &:focus {
@@ -83,6 +86,10 @@ a.no-style:visited {
         width: 100%;
     }
 
+    &.button--wide {
+        padding: 8px 16px;
+    }
+
     &.button--primary {
         color: var(--white);
         background-color: var(--gray-4);
@@ -91,4 +98,89 @@ a.no-style:visited {
 
 .font-size--small {
     font-size: var(--font-size--small);
+}
+
+.select {
+    padding: 8px;
+
+    font-family: var(--font-body);
+    font-size: var(--font-size--normal);
+    line-height: var(--font-size--bigger);
+
+    color: inherit;
+    background-color: transparent;
+
+    border: 1px solid var(--gray-2);
+    border-radius: 4px;
+}
+
+.input {
+    padding: 8px;
+
+    font-family: var(--font-body);
+    font-size: var(--font-size--normal);
+    line-height: var(--font-size--bigger);
+
+    color: inherit;
+    background-color: transparent;
+
+    border: 1px solid var(--gray-2);
+    border-radius: 4px;
+
+    transition: all 0.1s ease-in-out;
+
+    &:focus {
+        outline: 0;
+        border-color: var(--gray-6);
+    }
+
+    &.input--full {
+        width: 100%;
+    }
+
+    &.input--error {
+        border-color: var(--red-1);
+    }
+}
+
+.card {
+    padding: 16px;
+    margin-bottom: 8px;
+    background-color: var(--white);
+    border-radius: 4px;
+    box-shadow: var(--shadow-1);
+}
+
+.form {
+    position: relative;
+    opacity: 0;
+    transform: skew(-1deg, 0);
+
+    transition: all 0.1s ease-in-out;
+
+    &.form--loaded {
+        opacity: 1;
+        transform: unset;
+    }
+
+    .form__group {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 16px;
+
+        label {
+            font-size: var(--font-size--small);
+            margin-bottom: 8px;
+            font-weight: 700;
+        }
+    }
+
+    .form__button {
+        text-align: center;
+    }
+
+    .form__loader {
+        margin-top: 16px;
+        text-align: center;
+    }
 }
